--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"@radix-ui/react-accordion": "^1.2.12",
+		"@radix-ui/react-dialog": "^1.1.15",
 		"@tabler/icons-react": "^3.34.1",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
@@ -18,7 +19,8 @@
 		"next": "15.5.0",
 		"react": "19.1.0",
 		"react-dom": "19.1.0",
-		"tailwind-merge": "^3.3.1"
+		"tailwind-merge": "^3.3.1",
+		"vaul": "^1.1.2"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
